# RSF_projects

test_det_1/: CMakeLists.txt  gps_gun.mac  run.mac  vis.mac
test_det_1/include/: CommandMessenger.hh  DetGeometry.hh  PrimaryGen.hh  StepAct.hh
test_det_1/res/: Norm_Res.txt  Raw_Res.txt
test_det_1/src/: ActionInit.cc  DetGeometry.cc  PrimaryGen.cc  RunAct.cc  StepAct.cc
test_det_2/: CMakeLists.txt  gps_gun_vis.mac  init_vis.mac  main.cc  run.mac  spectra_Cs137.txt  vis.mac
test_det_2/include/: ActionInit.hh  DetGeometry.hh  EventAct.hh  RunAct.hh
test_det_2/res/: Deposited Energy Norm.txt  Deposited Energy.txt  Norm_Res.txt  Photons Counter Energy For Neutron 14 MeV.txt  Photons Counter.txt  Raw_Res.txt
test_det_2/src/: CommandMessenger.cc  DetGeometry.cc  EventAct.cc  PrimaryGen.cc  RunAct.cc  StepAct.cc
